# MuSIC

./: .gitignore  MuSIC-guide.md  README.md  Reproduce-MuSIC-paper-results.ipynb  Step-by-step guide to build MuSIC v1.ipynb  analyze_densenet.py  analyze_node2vec.py  calibrate_pairwise_distance.py  cap_louvain.py  community_detection.py  df_utils.py  environment.yml  example_buid_music_v1.sh  file_utils.py  format_GO_data.py  format_densenet_data.py  format_dn_data.py  format_dn_restGP_data.py  format_dn_train_test_data.py  format_n2v_data.py  format_random_forest.py  format_x_and_y_data.py  hierarchy_evaluation.py  louvain_partition.py  mature_hier_structure.py  music.yml  music_utils.py  pred_RF.py  preprocess_node2vec.py  quantile_regression.py  random_forest_input.py  random_forest_output.py  random_forest_samples.py  requirements.txt  run_random_forest.py  test.py  toy_example.sh  train_RF.py  trim_clixo.py
CliXO/: CMakeLists.txt  CliXO2 cookbook.ipynb  README.md  clixo  clixo.cpp  clustersToDAG  clustersToDAG.cpp  dagConstruct.h  graph_undirected.h  graph_undirected_bitset.h  makefile
CliXO/clixo0.3/: LICENSE  README  clixo  clixo.cpp  clustersToDAG  clustersToDAG.cpp  dagConstruct.h  dagConstruct.h~  extractOnt  makefile  ontologyTermStats
CliXO/clixo0.3/example/: examplePeek
CliXO/data/: DNArepair.noise.0.05.sc  dna_repair.sc
CliXO/example/: exampleInput  exampleOutput  exampleOutputOnt  exampleOutputOntStats  examplePeek_clusts.txt
Examples/: GO_annotated_proteins.txt  HumanCellMap_edge_matrix.csv  MuSIC_proteins.txt  all_hekfeature_dropMultiGeneEntry_dropNullAnnot.info.pkl  hek293_x_cc_genes.602.npy  human_go_cc.no_hpa.symbol.termStats  img_x_ppi.661.genelist.npy  rest_genepair.npy
Examples/.ipynb_checkpoints/: Step-by-step guide to build MuSIC v1-checkpoint.ipynb
Examples/toy/: toy_APMS_embedding.csv  toy_IF_image_embedding.csv  toy_proteins.txt
Figures/community_detection/: louvain_partition.py
community_detection/: cap_louvain.py  clean_up.py  louvain_partition.py  mature_hier_structure.py  predict_size.py  process_clixoOutFile.py  trim_clixo.py
data/: calibration.txt
installation/: install.sh  requirements.txt
random_forest/: balance_sample.py  format_emd_data.py
